--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,14 @@
 <html>
 <head>
-<<<<<<< HEAD
-<title>Bienvenido a hyperblog2.0</title>
-=======
-<title>Bienvenido a hyperblog 2.0</title>
->>>>>>> 4d48c99ca7f72a52e223bb6a23370af52477717b
+<title>Bienvenido a Hyperblog 2.0</title>
 <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
 <div id="container">
 <div id="cabecera">
+<img id="logo" src="imagenes/dragon.png" />
 Hyperblog
-<span id="tagline">Tu blog de cabecera.</span>
+<span id="tagline">Tu blog de cabecera</span>
 </div>
 <div id="post">
 <h1>Este es el título atractivo e interesante del post</h1>
