--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-<<<<<<< HEAD
-<title>Bienvenido a hyperblog2.0</title>
-=======
 <title>Bienvenido a hyperblog 2.0</title>
->>>>>>> 4d48c99ca7f72a52e223bb6a23370af52477717b
 <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
@@ -19,6 +15,8 @@ Hyperblog
 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
 <p>Suscribete y dale like</p>
 </div>
+<div id="footer">
+    Hecho con amor en Platzi ♥
 </div>
 </body>
 </html>
